strip tags in short desc, fix products grid overflow

--- a/wp-content/themes/netping/style.css
+++ b/wp-content/themes/netping/style.css
@@ -1931,6 +1931,10 @@ footer.site-footer h2 {
 
 /** Catalog styles **/
 
+ul.products {
+	overflow: auto;
+}
+
 ul.products li.product:before {
 	display: none;
 }
